--- a/index.html
+++ b/index.html
@@ -195,8 +195,12 @@
 
         <div class="audio_player">
             <button class="play" id="PlaySongs">
-                <svg width="26" height="26" viewBox="-2 -2 24 24" fill="white" stroke="white" stroke-width="2">
-                    <polygon points="5 3 19 12 5 21 5 3"></polygon>
+                <svg class="play-icon" width="26" height="26" viewBox="-2 0 24 24" fill="white" stroke="white" stroke-width="0">
+                    <polygon points="5 3 20 12 5 21 5 3"></polygon>
+                </svg>
+                <svg class="pause-icon" width="26" height="26" viewBox="-2 -2 24 24" fill="white" stroke="white" stroke-width="4" style="display: none;">
+                    <line x1="6" y1="2" x2="6" y2="18"></line>
+                    <line x1="14" y1="2" x2="14" y2="18"></line>
                 </svg>
             </button>
             <!--<div id="waveform">-->
