--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
 
 
-        <div class="audio_player">
+        <div class="audio_player" style="display: none;">
             <button class="play" id="PlaySongs">
                 <svg class="play-icon" width="26" height="26" viewBox="-2 0 24 24" fill="white" stroke="white" stroke-width="0">
                     <polygon points="5 3 20 12 5 21 5 3"></polygon>
