--- a/index.html
+++ b/index.html
@@ -42,8 +42,32 @@
 
                         <div1 class="animated-text">
                             I am a <span></span>
+
                         </div1>
+                        <div>
+                            <h4>
+                                <br><i>
+                                    Self-motivated and hardworking individual with a zeal for problem-solving and embracing new
+                                    challenges. Open to opportunities that allow me to grow and contribute effectively. Known for
+                                    adaptability, enthusiasm, and a strong commitment to excellence.
+                                </i>
+                                <br> <br><b>Experiences:</b>
+                                <br> * [Jan 2021 - Dec 2023] Worked at Seabreeze International school for 3 years  as a Part-time Physics Teacher
+                                <br> * [July 2022 - Present] Worked Onstage and Backstage for multiple dramas as a member of North South University Cine and Drama Club.
+                                <br> * [Dec 2023 - Present]  Worked on many Games and participated in multiple GameJams.
+                                <br> * [July 2018 - Present] Worked on Music for games and solo releases on soundcloud.
+                                <br> * [Aug 2015 - Present]  Worked with Photoshop and Adobe Illustrator for various GFX related work. 
+
+
+                            </h4>
+                            <h5>
+                                <br><br>[Feb 2025] Currently Looking for an on-site Internship within Dhaka, preferably close to Gulshan.
+                            </h5>
+                        </div>
+
+
                     </p2>
+
 
                 </section>
             </main>
@@ -64,7 +88,7 @@
             </header>
             <main>
                 <section>
-                    <h2>Hello! I am Saif Bhuiya. </h2>
+                    <h2>Hello! My name is Saif Bhuiya. </h2>
                     <p>I am a Software Engineer from Bangladesh. <br>I did my Bachelors in Computer Science and Engineering from North South University, Bangladesh. <br>My current CGPA: 3.70.<br> My Projects:</p>
                     <p1>
                         <br> <a href="https://github.com/SaifBhuiya/CSE299">Optical Mark Recognition (OMR) from pictures taken by a phone</a>
