--- a/index.html
+++ b/index.html
@@ -121,9 +121,13 @@
                     <p>I am a Game Developer from Bangladesh.</p>
                 </section>
                 <section1>
-                    <iframe frameborder="0" src="https://itch.io/embed/3348299?border_width=5&amp;bg_color=f3e6c2&amp;fg_color=5D1E1E&amp;link_color=b54e5d&amp;border_color=7b0c3a"
+                    <iframe frameborder="1" src="https://itch.io/embed/3348299?border_width=5&amp;
+                            bg_color=f3e6c2&amp;fg_color=5D1E1E&amp;link_color=b54e5d&amp;border_color=7b0c3a"
                             width="560" height="175">
+                       <a href="https://dan5626.itch.io/mikas-diary">Mika's Diary by Dan5626, BorjeGames, Roohaha, Kingsley Ezenwoye</a>
                     </iframe>
+
+
                     <iframe frameborder="1" src="https://itch.io/embed/3044550?linkback=true&amp;
             border_width=5&amp;bg_color=f5e5c2&amp;fg_color=d87645&amp;link_color=7469ad&amp;border_color=a463ab"
                             width="560" height="175">
