fixed game section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                             </h4>
                             <h5>
-                                <br><br>[Feb 2025] Currently Looking for an on-site Internship within Dhaka, preferably close to Gulshan.
+                                <br><br>[March 2025] Currently Looking for an on-site Internship within Dhaka, preferably close to Gulshan.
                             </h5>
                         </div>
 
@@ -120,29 +120,22 @@
                     <h2>Hello! I am Dan5626. </h2>
                     <p>I am a Game Developer from Bangladesh.</p>
                 </section>
-                <section1>
-                    <iframe frameborder="1" src="https://itch.io/embed/3348299?border_width=5&amp;
-                            bg_color=f3e6c2&amp;fg_color=5D1E1E&amp;link_color=b54e5d&amp;border_color=7b0c3a"
-                            width="560" height="175">
-                       <a href="https://dan5626.itch.io/mikas-diary">Mika's Diary by Dan5626, BorjeGames, Roohaha, Kingsley Ezenwoye</a>
-                    </iframe>
+                <section>
+                    <iframe frameborder="0" src="https://itch.io/embed/3348299?border_width=5&amp;bg_color=f3e6c2&amp;fg_color=5D1E1E&amp;link_color=b54e5d&amp;border_color=7b0c3a" width="560" height="175">
+                    <a href="https://dan5626.itch.io/mikas-diary">Mika's Diary by Dan5626, BorjeGames, Roohaha, Kingsley Ezenwoye</a></iframe>
 
 
-                    <iframe frameborder="1" src="https://itch.io/embed/3044550?linkback=true&amp;
-            border_width=5&amp;bg_color=f5e5c2&amp;fg_color=d87645&amp;link_color=7469ad&amp;border_color=a463ab"
-                            width="560" height="175">
+                    <iframe frameborder="1" src="https://itch.io/embed/3044550?linkback=true&amp;border_width=5&amp;bg_color=f5e5c2&amp;fg_color=d87645&amp;link_color=7469ad&amp;border_color=a463ab" width="560" height="175">
                         <a href="https://dan5626.itch.io/young-king">The Young King by Dan5626</a>
                     </iframe>
-                    <iframe frameborder="1" src="https://itch.io/embed/2973622?border_width=5&amp;bg_color=46a682&amp;fg_color=1b2a67&amp;link_color=1b2a67&amp;border_color=172924"
-                            width="560" height="175">
+                    <iframe frameborder="1" src="https://itch.io/embed/2973622?border_width=5&amp;bg_color=46a682&amp;fg_color=1b2a67&amp;link_color=1b2a67&amp;border_color=172924" width="560" height="175">
                         <a href="https://dan5626.itch.io/that-stormy-night">That Stormy Night by Dan5626, NickusD</a>
                     </iframe>
-                    <iframe frameborder="1" src="https://itch.io/embed/2909337?linkback=true&amp;
-            border_width=5&amp;bg_color=000000&amp;fg_color=ff8711&amp;link_color=8200c4&amp;border_color=b034ff" width="560" height="175">
+                    <iframe frameborder="1" src="https://itch.io/embed/2909337?linkback=true&amp;border_width=5&amp;bg_color=000000&amp;fg_color=ff8711&amp;link_color=8200c4&amp;border_color=b034ff" width="560" height="175">
                         <a href="https://batmenzdw.itch.io/space-forge">Space Forge by BatmenzDW, Vinny Games (Pugtooth), Dan5626</a>
                     </iframe>
 
-                </section1>
+                </section>
 
             </main>
         </div>
