--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                             </h4>
                             <h5>
-                                <br><br>[March 2025] Currently Looking for an on-site Internship within Dhaka, preferably close to Gulshan.
+                                <br><br>[April 2025] Currently Looking for a remote/on-site Internship within Dhaka, preferably close to Gulshan.
                             </h5>
                         </div>
 
