--- a/index.html
+++ b/index.html
@@ -52,16 +52,46 @@
                                     adaptability, enthusiasm, and a strong commitment to excellence.
                                 </i>
                                 <br> <br><b>Experiences:</b>
-                                <br> * [Jan 2021 - Dec 2023] Worked at Seabreeze International school for 3 years  as a Part-time Physics Teacher
-                                <br> * [July 2022 - Present] Worked Onstage and Backstage for multiple dramas as a member of North South University Cine and Drama Club.
-                                <br> * [Dec 2023 - Present]  Worked on many Games and participated in multiple GameJams.
-                                <br> * [July 2018 - Present] Worked on Music for games and solo releases on soundcloud.
-                                <br> * [Aug 2015 - Present]  Worked with Photoshop and Adobe Illustrator for various GFX related work. 
+                                         <table>
+                                             <tr>
+                                                 <th>Duration</th>
+                                                 <th>Work Type</th>
+                                                 <th> Info</th>
+
+                                             </tr>
+                                             <tr>
+                                                 <td>Jan 2021 - Dec 2023</td>
+                                                 <td>Physics Teacher</td>
+                                                 <td>Seabreeze international School</td>
+                                             </tr>
+                                             <tr>
+                                                 <td>Dec 2023 - Present</td>
+                                                 <td>Game Developer</td>
+                                                 <td>GameJams on Itch.io</td>
+                                             </tr>
+                                             <tr>
+                                                 <td>July 2022 - Present</td>
+                                                 <td>Acting and Backstage Management</td>
+                                                 <td>North South University Cine and Drama Club</td>
+                                             </tr>
+                                             <tr>
+                                                 <td>July 2018 - Present</td>
+                                                 <td>Music Producer</td>
+                                                 <td>Game Music/ Solo releases on Soundcloud</td>
+                                             </tr>
+                                             <tr>
+                                                 <td>Aug 2015 - Present</td>
+                                                 <td>Graphics Designer</td>
+                                                 <td>Photoshop / Adobe Illustrator</td>
+                                             </tr>
+
+                                         </table>
+
 
 
                             </h4>
                             <h5>
-                                <br><br>[April 2025] Currently Looking for a remote/on-site Internship within Dhaka, preferably close to Gulshan.
+                                <br><br>[April - July 2025] Currently Looking for a remote/on-site Internship within Dhaka, preferably close to Gulshan.
                             </h5>
                         </div>
 
@@ -88,13 +118,18 @@
             </header>
             <main>
                 <section>
-                    <h2>Hello! My name is Saif Bhuiya. </h2>
-                    <p>I am a Software Engineer from Bangladesh. <br>I did my Bachelors in Computer Science and Engineering from North South University, Bangladesh. <br>My current CGPA: 3.70.<br> My Projects:</p>
-                    <p1>
+                    <h2>Skill Showcase </h2>
+                    <br>Name: Saif Bhuiya
+                    <br>Degree: Bachelors in Computer Science and Engineering
+                    <br>University: North South University, Bangladesh
+                    <br>CGPA: 3.70
+                    <br>Projects:</p>
+                    <!--<p1>-->
                         <br> <a href="https://github.com/SaifBhuiya/CSE299">Optical Mark Recognition (OMR) from pictures taken by a phone</a>
                         <br> <a href="https://github.com/SaifBhuiya/Mediapipe">Augmented Reality based Clothing Trial App</a>
                         <br> <a href="https://saifbhuiya.github.io/My_Website/">This Website</a>
-                    </p1>
+                        <br> <a href="https://github.com/SaifBhuiya">Github Repos</a>
+                    <!--</p1>-->
                 </section>
             </main>
         </div>
